FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
					${CMAKE_SOURCE_DIR}/src/hydro_cxx	
					${CMAKE_SOURCE_DIR}/src/hydro_swig)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(swig_test.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(swig_test.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(swig_test LANGUAGE python SOURCES swig_test.i)
SWIG_LINK_LIBRARIES(swig_test ${PYTHON_LIBRARIES})